--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^2.4.1",
     "react-native-haptic-feedback": "^1.13.1",
     "react-native-reanimated": "^2.8.0",
+    "react-native-redash": "^16.2.4",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-sound": "^0.11.2",
