--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,16 +15,23 @@
     "target": "esnext",
     "baseUrl": ".",
     "paths": {
+      "@types": ["./src/@types"],
+      "@types/*": ["./src/@types/*"],
       "assets": ["./src/assets"],
       "assets/*": ["./src/assets/*"],
       "configuration": ["./src/configuration"],
       "configuration/*": ["./src/configuration/*"],
       "core": ["./src/core"],
       "core/*": ["./src/core/*"],
+      "hooks": ["./src/hooks"],
+      "hooks/*": ["./src/hooks/*"],
       "ui": ["./src/ui"],
-      "ui/*": ["./src/ui/*"]
+      "ui/*": ["./src/ui/*"],
+      "utils": ["./src/utils"],
+      "utils/*": ["./src/utils/*"]
     },
     "resolveJsonModule": true
   },
+  "include": ["node_modules/react-native-redash/lib/typescript/v1/index.d.ts"],
   "exclude": ["ios", "patches/reanimated", "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
